[package]
name = "azul-dll"
version = "0.0.7"
authors = ["Felix Schütt <felix.schuett@maps4print.com>"]
license = "MPL-2.0"
description = "C-API of Azul GUI"
homepage = "https://azul.rs/"
keywords = ["gui", "user-interface", "svg", "graphics", "css" ]
categories = ["gui"]
repository = "https://github.com/maps4print/azul"
edition = "2021"
autoexamples = false
build = "build.rs"

[lib]
name = "azul"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
# Core crates - only needed for build-dll and link-static, NOT for link-dynamic
azul-core = { path = "../core", version = "0.0.7", default-features = false, optional = true }
azul-css = { path = "../css", version = "0.0.7", default-features = false, optional = true }
azul-layout = { path = "../layout", version = "0.0.7", default-features = false, features = ["font_loading", "text_layout", "svg", "xml", "cpurender"], optional = true }

# Logging
log = { version = "0.4.17", default-features = false, optional = true }
fern = { version = "0.7.1", default-features = false, optional = true }
backtrace = { version = "0.3.66", optional = true }

# Python bindings
pyo3 = { version = "0.27.1", default-features = false, features = ["abi3", "multiple-pymethods", "extension-module", "macros", "auto-initialize"], optional = true }
pyo3-log = { version = "0.13.2", default-features = false, optional = true }

# PHP bindings (Zend engine extension via ext-php-rs)
# Used by feature `php-extension`. Provides closure-to-fnpointer
# support that standard php-ffi rejects, lifting the host-invoker
# blocker for the PHP example.
ext-php-rs = { version = "0.15", default-features = false, optional = true }

# Desktop windowing dependencies
# tfd (tinyfiledialogs) is for modal panic dialogs on the desktop;
# it has no equivalent on Android/iOS (no native modal API from a Rust
# crate) and its 0.1.0 release uses an older `jni` API that doesn't
# cross-compile for android targets. Declared per-target below.
rust-fontconfig = { version = "4.3.0", default-features = false, features = ["std", "parsing", "async-registry", "cache"], optional = true }
gl-context-loader = { version ="0.1.8", default-features = false, optional = true }
webrender = { path = "../webrender/core", default-features = false, optional = true }
once_cell = { version = "1.17.1", optional = true }
bitflags = { version = "2.8.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
# Postcard: compact no_std-friendly binary serialization. Used by
# the web backend's hydration payload (M8.7) — server serializes
# the HeadlessApp into one postcard envelope, embeds as base64 in
# the HTML head, wasm client deserializes at AzStartup_init.
postcard = { version = "1.0", features = ["use-std"], optional = true }
base64 = { version = "0.22", optional = true }

# Accessibility
accesskit = { version = "0.24", default-features = false, optional = true }

# PNG encoding for screenshots
png = { version = "0.18", default-features = false, optional = true }

# Windows-only: libm for math functions
libm = { version = "0.2.2", default-features = false, optional = true }

# Enum iteration for debug server
strum = { version = "0.28", default-features = false, optional = true }

# SPMC channel for debug server → window timer communication
spmc = { version = "0.3", optional = true }

cfg-if = { version = "1.0", optional = true }

# Brotli decompression for embedded compressed assets (web backend api.json)
brotli-decompressor = { version = "5", default-features = false, features = ["std"], optional = true }

# Mach-O / ELF / PE parsing for the web-transpiler SymbolTable. Wraps
# every platform under one `goblin::Object::parse` call, so the
# SymbolTable's macOS / Linux backends share most of their code.
# (Default features include elf32/elf64/mach32/mach64/pe32/pe64; some
# of goblin's internal macros reference elf32 even when only elf64 is
# wanted, so defaults are the path of least friction.)
goblin = { version = "0.10", optional = true }

# Custom allocators — use these to aggressively return freed pages to the OS.
# Thanks to the C API boundary, the azul library can use a different allocator
# than the binary linking against it, so enabling these only affects azul's
# internal allocations.
mimalloc = { version = "0.1", default-features = false, optional = true }
tikv-jemallocator = { version = "0.6", default-features = false, optional = true }

# MVT/PBF decode + proj4rs Web-Mercator math for `MapWidget`'s tile pipeline.
# Inlined into `dll/src/desktop/extra/map/mvt.rs` (was the local-path `td`
# crate); proj4rs is the crates.io release. Opt-in via `feature = "map-tiles"`
# so default mobile builds stay light.
mvt-reader = { version = "2.1.0", features = ["wasm"], optional = true }
geo-types = { version = "0.7", optional = true }
proj4rs = { version = "0.1", optional = true }
# `geojson` re-export so callers can name `geojson::Feature` in the
# `decode_mvt_tile` return type without going through `td`'s private
# graph. Same gate as `td`.
geojson = { version = "0.24", optional = true }
# SQLite engine for the `Db` API (P4.3), gated by `db-sqlite`. `bundled`
# statically compiles SQLite from source (cc) — no system libsqlite, so the
# public surface stays a single dylib (approach A). Works on every platform;
# the bundled C compile needs each target's cc toolchain (NDK / iOS SDK).
rusqlite = { version = "0.37", features = ["bundled"], optional = true }
# PDF for AzulDoc (P5), gated by `pdf`. `text_layout` shares OUR azul-layout
# (via the root [patch.crates-io] → local printpdf branch + local azul-*), so
# the dll links exactly one azul-layout. `default-features = false` drops only
# the heavy `html`/`kuchiki` path (not needed; PDFs are driven via the JSON
# document model + our display list).
printpdf = { version = "0.9.1", default-features = false, features = ["text_layout"], optional = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tfd = { version = "0.1.0", default-features = false, optional = true }
# Gamepad input (P6 feature 6) — desktop backend (Win/Linux/macOS). Mobile
# uses GCController / InputDevice instead, so gilrs is desktop-only.
gilrs = { version = "0.11", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { version = "0.2", optional = true }
x11-clipboard = { version = "0.9.3", optional = true }
accesskit_unix = { version = "0.21", optional = true }
# GeoClue2 D-Bus client for the Linux geolocation backend. Pure-Rust (no system
# lib, cross-compiles) and already in the linux graph via accesskit_unix;
# non-optional so geolocation/linux.rs always compiles on linux.
zbus = "5"
# Runtime loader for the Linux ALSA audio backend (audio/alsa.rs dlopen's
# libasound). Non-optional on linux so the AudioSink backend always compiles.
libloading = "0.8"
# v4l2 camera capture for the Linux camera backend (camera/v4l2.rs). Pure-Rust
# (libc ioctls, no system-lib link, no bindgen — sidesteps the v4l-sys/clang
# conflict), so it cross-compiles + has the v4l2 ABI right.
rscam = "0.5"

[target.'cfg(any(target_os = "ios"))'.dependencies]
objc = { version = "0.2", optional = true }
objc-foundation = { version = "0.1", optional = true }
objc_id = { version = "0.1", optional = true }
# objc2 stack for the biometric backend (P4.1) — shared with macOS via
# `extra/biometric/apple.rs`. New objc2-native backends (design decision
# #2) use these rather than the objc 0.2 above.
objc2 = { version = "0.6.0", optional = true }
block2 = { version = "0.6.0", optional = true }
objc2-foundation = { version = "0.3.0", default-features = true, optional = true, features = [
    "std",
    "NSString",
    "NSError",
] }
objc2-local-authentication = { version = "0.3.2", default-features = true, optional = true, features = [
    "std",
    "LAContext",
    "LABiometryType",
    "block2",
] }
# Keychain (generic-password) for the keyring backend (P4.2). Already in
# the lock as a transitive dep; declared direct + optional here.
security-framework = { version = "3", optional = true }
# Motion sensors (P6 feature 5) — CMMotionManager pull API, shared with
# macOS via `extra/sensors/apple.rs`. CMLogItem gates the data accessors
# (acceleration/rotationRate/magneticField) + provides the sample timestamp.
objc2-core-motion = { version = "0.3.2", default-features = true, optional = true, features = [
    "std",
    "CMMotionManager",
    "CMAccelerometer",
    "CMGyro",
    "CMMagnetometer",
    "CMLogItem",
] }
# Camera capture (AVFoundation) for the iOS camera backend — shares
# camera/avfoundation.rs with macOS (same AVFoundation API). Minimal features.
objc2-av-foundation = { version = "0.3.0", default-features = false, optional = true, features = [
    "std",
    "dispatch2",
    "objc2-core-media",
    "AVCaptureSession",
    "AVCaptureDevice",
    "AVCaptureInput",
    "AVCaptureOutput",
    "AVCaptureOutputBase",
    "AVCaptureVideoDataOutput",
    "AVCaptureAudioDataOutput",
    "AVMediaFormat",
] }
objc2-core-media = { version = "0.3.0", default-features = false, optional = true, features = [
    "std",
    "objc2-core-video",
    "CMSampleBuffer",
    "CMBlockBuffer",
    "CMFormatDescription",
] }
objc2-core-video = { version = "0.3.0", default-features = false, optional = true, features = [
    "std",
    "CVBase",
    "CVPixelBuffer",
    "CVImageBuffer",
    "CVBuffer",
    "CVReturn",
] }
dispatch2 = { version = "0.3.0", default-features = false, features = ["std", "objc2"], optional = true }
# iOS audio playback (AVAudioEngine) for the AudioSink backend (cpal can't
# cross-compile to iOS). Minimal class-features; refined after reading the API.
objc2-avf-audio = { version = "0.3.0", default-features = false, optional = true, features = [
    "std",
    "AVAudioEngine",
    "AVAudioNode",
    "AVAudioIONode",
    "AVAudioMixing",
    "AVAudioMixerNode",
    "AVAudioPlayerNode",
    "AVAudioBuffer",
    "AVAudioFormat",
    "AVAudioTypes",
    "AVAudioTime",
    "block2",
] }

[target.'cfg(target_os = "android")'.dependencies]
# NativeActivity bootstrap, event polling, soft-keyboard control, and
# the input-event enum. `native-activity` feature gives us the C shim
# that calls `android_main` so no Java is needed for Phase 1-4.
android-activity = { version = "0.6", default-features = false, features = ["native-activity"], optional = true }
# `ANativeWindow_lock` / `unlockAndPost` and other NDK primitives.
ndk = { version = "0.9", default-features = false, optional = true }
# Raw NDK Camera2 FFI (ACameraManager / AImageReader) for the Android camera
# backend (camera/android.rs); the safe `ndk` crate doesn't wrap camera.
# Already transitive via `ndk`.
ndk-sys = { version = "0.6", optional = true }
# Optional bridge to logcat for `log` macros — feature-gated.
android_logger = { version = "0.14", optional = true }
# Soft-keyboard / IME bridge (Phase 5) — speaks to the Java
# `NativeInputConnection` shim via JNI.
jni = { version = "0.21", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", optional = true, default-features = false, features = [
    "windowsx",
    "libloaderapi",
    "errhandlingapi",
    "winuser",
    "uxtheme",
    "dwmapi",
    "wingdi",
    "commdlg",
    "winerror",
    "wincred",
    "minwindef",
] }
# Motion sensors (Windows.Devices.Sensors, WinRT) — accel/gyro/mag.
windows = { version = "0.62", optional = true, features = [
    "Devices_Sensors",
    "Foundation",
    "Security_Credentials_UI",
    "Win32_Foundation",
    "Win32_System_WinRT",
    "Win32_System_Com",
] }
# WinRT IAsyncOperation lives in windows-future (0.62 split); pollster blocks on it.
windows-future = { version = "0.3", optional = true }
pollster = { version = "0.4", optional = true }
clipboard-win = { version = "5.4", optional = true }
# Camera capture (Media Foundation) for the Windows camera backend
# (camera/windows.rs) - nokhwa owns the COM/MF ABI + gives a pull API, so we
# don't hand-roll COM. Non-optional so the backend always compiles on windows.
nokhwa = { version = "0.10", features = ["input-native"] }
accesskit_windows = { version = "0.32", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
cgl = { version = "0.3.2", optional = true }
dispatch2 = { version = "0.3.0", default-features = false, features = ["std", "objc2"], optional = true }
objc2 = { version = "0.6.0", optional = true }
objc = { version = "0.2", optional = true }
objc-foundation = { version = "0.1", optional = true }
objc_id = { version = "0.1", optional = true }
block2 = { version = "0.6.0", optional = true }
libloading = { version = "0.8.6", optional = true }
accesskit_macos = { version = "0.26", optional = true }
objc2-core-foundation = { version = "0.3.0", default-features = true, optional = true, features = [
    "std",
    "CFBase",
    "CFString",
    "CFBundle",
] }
objc2-foundation = { version = "0.3.0", default-features = true, optional = true, features = [
    "std",
    "NSArray",
    "NSThread",
    "NSString",
    "NSError",
] }
objc2-app-kit = { version = "0.3.0", default-features = true, optional = true, features = [
    "std",
    "objc2-core-foundation",
    "NSApplication",
    "NSMenu",
    "NSMenuItem",
    "NSResponder",
    "NSTextInputClient",
    "NSTextInputContext",
    "NSView",
    "NSWindow",
    "NSOpenGL",
    "NSOpenGLView",
] }
# Biometric auth (P4.1) — LAContext / evaluatePolicy / biometryType.
objc2-local-authentication = { version = "0.3.2", default-features = true, optional = true, features = [
    "std",
    "LAContext",
    "LABiometryType",
    "block2",
] }
# Keychain (generic-password) for the keyring backend (P4.2).
security-framework = { version = "3", optional = true }
# Motion sensors (P6 feature 5) — CMMotionManager, shared with iOS.
objc2-core-motion = { version = "0.3.2", default-features = true, optional = true, features = [
    "std",
    "CMMotionManager",
    "CMAccelerometer",
    "CMGyro",
    "CMMagnetometer",
    "CMLogItem",
] }
# Camera capture (AVFoundation) for the macОS camera backend
# (camera/avfoundation.rs). objc2 framework crates gate each class behind a
# feature, so default-features = false + only the capture-path classes keeps
# the build minimal (not the whole AVFoundation API).
objc2-av-foundation = { version = "0.3.0", default-features = false, optional = true, features = [
    "std",
    "dispatch2",
    "objc2-core-media",
    "AVCaptureSession",
    "AVCaptureDevice",
    "AVCaptureInput",
    "AVCaptureOutput",
    "AVCaptureOutputBase",
    "AVCaptureVideoDataOutput",
    "AVCaptureAudioDataOutput",
    "AVMediaFormat",
] }
objc2-core-media = { version = "0.3.0", default-features = false, optional = true, features = [
    "std",
    "objc2-core-video",
    "CMSampleBuffer",
    "CMBlockBuffer",
    "CMFormatDescription",
] }
objc2-core-video = { version = "0.3.0", default-features = false, optional = true, features = [
    "std",
    "CVBase",
    "CVPixelBuffer",
    "CVImageBuffer",
    "CVBuffer",
    "CVReturn",
] }

# Cross-platform mic + AudioSink (CoreAudio on apple, WASAPI on windows) - one
# cpal backend covers apple + windows audio. Linux uses dlopen ALSA (cpal's
# ALSA backend build-time-links libasound); android uses AAudio.
[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
cpal = "0.15"

[build-dependencies]
brotli = "8"
# M8.9: in-process remill + LLVM + LLD wrapper. Compiles
# dll/src/web/cpp/azul_remill.cpp + statically links the remill /
# LLVM / LLD libs from third_party/remill-install/ + cxx-common so
# libazul.dylib can lift native code → wasm32 without invoking
# external `remill-lift-17` / `opt` / `llc` / `wasm-ld` subprocesses.
# Gated by the `web-transpiler-static` feature; the build script
# no-ops when that's off.
cc = { version = "1.0", optional = true }

# =============================================================================
# Features
# =============================================================================

[features]
# Default: Build with static linking (for Rust applications)
# Use --features "build-dll" when building the shared library itself
default = [
    "std",
    "link-static",
    "logging",
    "a11y",
    "all_img_formats",
]

# -----------------------------------------------------------------------------
# Codegen Block Features (granular — each gates a generated include!() file)
# -----------------------------------------------------------------------------

# Internal C-ABI bindings: types + function bodies via transmute
# Uses: target/codegen/dll_api_internal.rs
# Requires the full azul stack (azul-core, azul-css, azul-layout)
cabi_internal = []

# Export C-ABI symbols with #[no_mangle] (for dlsym / C/C++/Python FFI)
# Implies cabi_internal. Also includes trait functions (_delete, _deepCopy, etc.)
# Needed by: build-dll (shared library), link-static + web (remill dlsym)
cabi_export = ["cabi_internal"]

# External C-ABI declarations: extern "C" { ... } for dynamic linking
# Uses: target/codegen/dll_api_external.rs
# Does NOT require azul-core or other internal crates
cabi_external = []

# Public Rust API re-exports (azul::dom::Dom, azul::app::App, etc.)
# Uses: target/codegen/reexports.rs
rust_api = []

# -----------------------------------------------------------------------------
# Build Modes
# -----------------------------------------------------------------------------

# Build the full desktop DLL with windowing, OpenGL, fonts, etc.
# This compiles all the platform-specific code in src/desktop/
# Exports C-ABI symbols with #[no_mangle] for use from C/C++/Python
build-dll = [
    "cabi_export",
    "rust_api",
    "_internal_deps",
    "font_loading_multithreaded",
    "font_async_registry",
    # Full functional surface for a complete libazul dylib — P4-P8 demos
    # consume these through api.json. New feature-gated subsystems
    # (db-sqlite, biometric, …) MUST be added here as they land.
    "a11y",
    "icons",
    "svg",
    "xml",
    "icu",
    "fluent",
    "http",
    "map-tiles",
    "db-sqlite",
    "pdf",
]

# SQLite-backed `Db` API (P4.3). Pulls the bundled-SQLite `rusqlite`
# engine; the public surface (SQL strings + DbValue/DbRows) hides it. Kept
# OUT of `link-static` (the mobile gate) so the gate doesn't cross-compile
# SQLite's C amalgamation for every target — verified instead via the host
# check + a targeted per-target check (see MOBILE_SESSION_LOG P4.3b).
db-sqlite = ["dep:rusqlite"]
# PDF export (P5 AzulDoc). Pulls printpdf's core PDF API (no azul-layout
# integration features). Out of `link-static` (the mobile gate), like
# db-sqlite; the export API is always present (stub when off), so it flows
# through codegen with no feature-gating.
pdf = ["dep:printpdf", "serde_json"]

# -----------------------------------------------------------------------------
# Link Modes (for consumers of the library)
# -----------------------------------------------------------------------------

# Static linking: C-ABI function bodies + #[no_mangle] exports
# Uses: target/codegen/dll_api_internal.rs (with #[no_mangle] via cabi_export)
# Requires the full azul stack to be compiled in
# NOTE: link-static now exports C-ABI symbols (same as build-dll) so that
# remill can discover function names via dlsym when AZ_BACKEND=web is used.
# Trait impls also route through C-ABI functions (not raw transmute) so that
# the call graph is visible to the x86→WASM lifter.
link-static = [
    "cabi_export",
    "rust_api",
    "_internal_deps",
]

# Dynamic linking: Include extern "C" declarations
# Uses: target/codegen/dll_api_external.rs
# Requires libazul.dylib/so/dll to be available at runtime
# Set AZUL_LINK_PATH environment variable to the directory containing libazul
# NOTE: Does NOT require azul-core or other internal crates
link-dynamic = [
    "cabi_external",
    "rust_api",
]

# Shared dependencies for build-dll and link-static (not user-facing)
_internal_deps = [
    "std",
    "azul-core",
    "azul-css",
    "azul-layout",
    # AZ_PROFILE=cpu per-phase timings — per-span overhead is tiny
    # (Instant::now + thread-local Vec push on Drop). Always-on in the
    # DLL so live apps can opt into profiling at run time, no rebuild.
    "azul-layout?/probe",
    "cpurender",
    "tfd",
    "gilrs",
    "rust-fontconfig",
    "gl-context-loader",
    "webrender",
    "once_cell",
    "bitflags",
    "serde",
    "serde_json",
    "serde-json",
    "backtrace",
    "font_loading",
    "text_layout",
    "svg",
    "xml",
    "strum",
    "spmc",
    "dep:png",
    # Platform-specific clipboard
    "x11-clipboard",
    "clipboard-win",
    # Windows needs libm
    "libm",
    # ICU backends: each platform picks the best one via cfg conditions.
    # macOS  → icu_macos  (Foundation, no data blobs)
    # Windows → icu_windows (Win32 NLS, no data blobs)
    # Linux  → icu        (ICU4X, data blobs — no system alternative)
    "icu",
    "icu_macos",
    "icu_windows",
    # Fluent localization support
    "fluent",
    # HTTP client support (pulls in ring via rustls — requires C compiler for cross-compilation)
    "http",
    # ZIP file manipulation
    "zip_support",
    # JSON support
    "json",
    # Icon provider support
    "icons",
    # Platform-specific deps (optional, only linked on matching OS)
    "cfg-if",
    "cgl",
    "dispatch2",
    "objc2",
    "objc",
    "objc-foundation",
    "objc_id",
    "block2",
    "libloading",
    # Android NDK + NativeActivity glue (no-op on non-Android targets via
    # target.'cfg' gate above).
    "android-activity",
    "ndk",
    "ndk-sys",
    # JNI for Rust → Java calls (file picker, soft keyboard, permission
    # prompts). The receiving direction (Java → Rust) is via raw `extern
    # "system"` symbols and doesn't need this dep.
    "jni",
    "objc2-core-foundation",
    "objc2-foundation",
    "objc2-app-kit",
    "objc2-local-authentication",
    "objc2-core-motion",
    "objc2-av-foundation",
    "objc2-avf-audio",
    "objc2-core-media",
    "objc2-core-video",
    "security-framework",
    "libc",
    "winapi",
    "windows",
    "windows-future",
    "pollster",
]

# -----------------------------------------------------------------------------
# Core Features
# -----------------------------------------------------------------------------

# NOTE: std feature only affects azul-core/layout when they are enabled via build-dll or link-static
# For link-dynamic, std has no effect since those crates aren't included
std = ["azul-core?/std", "azul-layout?/std"]
logging = ["log"]

# Memory allocator features — set the global allocator inside the azul DLL.
# Since azul exposes a C API, the allocator only affects azul's internal
# allocations. The host application keeps its own allocator.
# These are mutually exclusive; enabling both is a compile error.
allocator_mimalloc = ["dep:mimalloc"]
allocator_jemalloc = ["dep:tikv-jemallocator"]

# Web backend: serve the app as HTML over HTTP (AZ_BACKEND=web://ip:port)
# Phase 0: no external dependencies (uses std::net::TcpListener).
# Phase 1+: will add remill-rs, wasm-encoder as optional deps.
# Can be combined with link-static (Rust app) or used standalone (C binary).
web = [
    "azul-core",
    "azul-css",
    "azul-layout",
    "rust-fontconfig",
    "serde",
    "serde_json",
    "postcard",
    "base64",
    "dep:brotli-decompressor",
]

# x86-64 → WASM transpiler backend for the web feature.
# OFF by default: `default_transpiler()` returns `StubTranspiler`, the
# pure-Rust fallback that errors on lift and lets callbacks run server-side.
# ON: pulls in the remill-rs git submodule (third_party/remill-rs) and routes
# `default_transpiler()` through `RemillTranspiler`, which lifts x86-64 →
# LLVM IR → WASM. This is intentionally an opt-in feature so the default
# `web` build stays dependency-free and the transpile step's position in
# the web.md flow (build-time, first-request, lazy-per-callback) stays a
# caller decision rather than a hard-wired pipeline stage.
web-transpiler = ["web", "dep:goblin"]

# Statically link remill + LLVM + LLD into libazul.dylib so the
# transpiler doesn't need external CLI tools. ~120 MB of static
# libs get pulled in. Requires:
#   - third_party/remill-install/install/{include,lib}/ populated
#     (run `bash scripts/build_remill.sh` to bootstrap).
#   - third_party/cxx-common/vcpkg_macos-13_llvm-17-liftingbits-llvm_xcode-15.0_arm64/
#     installed/arm64-osx-rel/{include,lib}/ populated (vcpkg-based
#     LLVM 17 + LLD ship with remill's cxx-common bundle).
# build.rs invokes `cc` to compile dll/src/web/cpp/azul_remill.cpp
# + emits the static-lib link line for cargo.
web-transpiler-static = ["web-transpiler", "dep:cc"]

# -----------------------------------------------------------------------------
# Accessibility
# -----------------------------------------------------------------------------

a11y = [
    "accesskit",
    "azul-layout/a11y",
    "accesskit_windows",
    "accesskit_macos",
    "accesskit_unix",
]

# -----------------------------------------------------------------------------
# Image Formats
# -----------------------------------------------------------------------------

all_img_formats = ["ico", "tga", "hdr", "jpeg", "webp", "pnm", "gif", "png", "tiff", "bmp"]
gif = ["azul-layout", "azul-layout/gif"]
jpeg = ["azul-layout", "azul-layout/jpeg"]
png = ["azul-layout", "azul-layout/png"]
tiff = ["azul-layout", "azul-layout/tiff"]
bmp = ["azul-layout", "azul-layout/bmp"]
ico = ["azul-layout", "azul-layout/ico"]
tga = ["azul-layout", "azul-layout/tga"]
hdr = ["azul-layout", "azul-layout/hdr"]
webp = ["azul-layout", "azul-layout/webp"]
pnm = ["azul-layout", "azul-layout/pnm"]

# -----------------------------------------------------------------------------
# Layout Features
# -----------------------------------------------------------------------------

svg = ["azul-layout", "azul-layout/svg"]
xml = ["azul-layout", "azul-layout/xml"]
cpurender = ["azul-layout", "azul-layout/cpurender"]
font_loading = ["azul-layout", "azul-layout/font_loading"]
font_loading_multithreaded = ["font_loading", "azul-layout/font_loading_multithreaded"]
font_async_registry = ["font_loading", "azul-layout/font_async_registry"]
text_layout = ["azul-layout", "azul-layout/text_layout"]

# ICU4X internationalization support
icu = ["azul-layout", "azul-layout/icu"]
icu_chrono = ["icu", "azul-layout/icu_chrono"]

# macOS Foundation ICU backend (replaces ICU4X data blobs on macOS, ~3.3 MB savings).
# On non-macOS platforms this feature is a no-op.
icu_macos = ["azul-layout", "azul-layout/icu_macos"]

# Windows NLS ICU backend (replaces ICU4X data blobs on Windows, ~3.3 MB savings).
# On non-Windows platforms this feature is a no-op.
icu_windows = ["azul-layout", "azul-layout/icu_windows"]

# Project Fluent localization support (FTL files, language packs)
fluent = ["azul-layout", "azul-layout/fluent"]

# Icon provider support (material icons, icon packs). The dll owns the
# `include!` of the codegen-generated material_icons.ttf.br (moved out of
# azul-layout to break the azul-doc→azul-layout build cycle), so enabling
# icons must also pull the brotli decompressor here.
icons = ["azul-layout", "azul-layout/icons", "dep:brotli-decompressor"]

# HTTP client support for downloading resources
http = ["azul-layout", "azul-layout/http"]

# ZIP file manipulation support
zip_support = ["azul-layout", "azul-layout/zip_support"]

# JSON parsing and manipulation
json = ["azul-layout", "azul-layout/json"]

# MVT (Mapbox Vector Tile) decode + Web-Mercator projection math for
# `MapWidget`. Off by default — pulls in `td`, `mvt-reader`, `proj4rs`,
# `geo-types`, `geojson` which would inflate the mobile cargo-check.
# Desktop builds that actually fetch and decode tiles enable this via
# `--features map-tiles`.
map-tiles = ["dep:mvt-reader", "dep:geo-types", "dep:proj4rs", "dep:geojson", "serde_json", "http"]

# JSON serialization for RefAny (enables RefAny::new_serde<T>)
# Requires T: serde::Serialize + serde::de::DeserializeOwned
serde-json = ["serde", "serde_json", "azul-core?/serde-json"]

# -----------------------------------------------------------------------------
# Logging Backends
# -----------------------------------------------------------------------------

use_fern_logger = ["logging", "fern"]
use_pyo3_logger = ["pyo3-log", "logging"]

# -----------------------------------------------------------------------------
# Predefined Configurations
# -----------------------------------------------------------------------------

# Python extension module
python-extension = ["build-dll", "pyo3", "use_pyo3_logger", "link-static"]

# PHP extension module (Zend engine native extension via ext-php-rs).
# Unlike the standard php-ffi path, this loads through the Zend engine
# and supports closure callbacks (the host-invoker pattern that all
# other managed-FFI hosts use).
# Build with:
#   cargo build --release --features php-extension
# Then load:
#   php -d extension=/path/to/libazul.so hello-world.php
php-extension = ["build-dll", "ext-php-rs", "link-static", "once_cell"]

# -----------------------------------------------------------------------------
# E2E Test Harness (AZ_E2E_TEST env-var-driven scenario runner)
# -----------------------------------------------------------------------------
# Enables the `common::e2e_test` module. At runtime, setting AZ_E2E_TEST=<json>
# replaces the normal window loop with a scripted resize/tick scenario that
# probes RSS after each batch of iterations. Used to reproduce the calc.c
# resize leak deterministically.
e2e-test = ["serde_json", "azul-layout?/probe"]

# -----------------------------------------------------------------------------
# Examples
# -----------------------------------------------------------------------------

[[example]]
name = "transpile_fn"
path = "examples/transpile_fn.rs"
required-features = ["web", "link-static"]

# -----------------------------------------------------------------------------
# Package Metadata
# -----------------------------------------------------------------------------

[package.metadata.deb]
maintainer = "Felix Schütt <felix.schuett@maps4print.com>"
extended-description = """
    AZUL GUI Toolkit (https://azul.rs).
    Cross-platform GUI toolkit written in Rust
    built using the WebRender rendering engine
"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/libazul.so", "usr/lib/", "755"]
]

[package.metadata.docs.rs]
no-default-features = true
features = [
    "std",
    "logging",
    "all_img_formats",
    "font_loading",
    "text_layout",
    "svg",
    "xml",
    "use_fern_logger",
]
